--- a/app/src/main/res/layout/item_trend_detail.xml
+++ b/app/src/main/res/layout/item_trend_detail.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
+    android:foreground="?attr/selectableItemBackground"
+    >
 
     <TextView
         android:id="@+id/tv_trend_detail_desc"
@@ -21,8 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="15sp"
-        tools:text="매일경제"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_trend_detail_desc" />
+        app:layout_constraintTop_toBottomOf="@id/tv_trend_detail_desc"
+        tools:text="매일경제" />
 </androidx.constraintlayout.widget.ConstraintLayout>
