--- a/app/src/main/res/layout/item_trend_detail.xml
+++ b/app/src/main/res/layout/item_trend_detail.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/selectableItemBackground">
+    android:background="?attr/selectableItemBackground"
+    android:paddingStart="20dp"
+    android:paddingEnd="20dp">
 
     <TextView
         android:id="@+id/tv_trend_detail_desc"
@@ -22,7 +24,6 @@
         android:id="@+id/tv_trend_detail_source"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
         android:gravity="end"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
