--- a/app/src/main/res/layout/item_trend_detail_footer.xml
+++ b/app/src/main/res/layout/item_trend_detail_footer.xml
@@ -1,34 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?attr/selectableItemBackground"
-        android:text="구글\n검색"
-        android:textSize="30sp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?attr/selectableItemBackground"
-        android:text="네이버\n검색"
-        android:textSize="30sp" />
+    <ImageView
+        android:id="@+id/iv_trend_detail_item_google"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/logo_google"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/iv_trend_detail_item_daum"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?attr/selectableItemBackground"
-        android:text="다음\n검색"
-        android:textSize="30sp" />
-</LinearLayout>
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/iv_trend_detail_item_daum"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/logo_daum"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/iv_trend_detail_item_naver"
+        app:layout_constraintStart_toEndOf="@id/iv_trend_detail_item_google"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/iv_trend_detail_item_naver"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/logo_naver"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/iv_trend_detail_item_daum"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
